  - Message body reader/writer MultivaluedMap<String, String>
    with the media type "application/x-www-form-urlencoded".
  - Injection of javax.ws.rs.ext.MessageBodyWorkers to get message body
    readers and writers. Note this is very similar to
    com.sun.ws.rest.spi.container.MessageBodyContext, which will be removed
    if/when MessageBodyWorkers supports the same functionality.

release 0.6.1 (2008-03-18)
- Support for xml attributes serialization/deserialization in JSON added
  (as a fix for 43)
  https://jersey.dev.java.net/issues/show_bug.cgi?id=43
- Fixed issue 45: Jersey leaves stream open; locks JAR file on Windows
  https://jersey.dev.java.net/issues/show_bug.cgi?id=45

release 0.6 (2008-03-07)
- Support for a Model View Controller abstraction and plugging in templates
  processors that process models that produce views. See classes in the package:
    com.sun.ws.rest.spi.template
- Consumable and configuration JSON support with JAXB
- Grizzly support is upgraded to 1.7.2.
- A sub-resource locator can now return a Class instance, that will be
  instantiated using a ComponentProvider, using the life-cycle rules for
  resource classes.
- Removed support for using the GET to return WADL of resources, only the
  OPTIONS method is supported. The application.wadl is still obtained using GET.
- Fixed issue 41: WebApplicationException(500) returning response code 2
  https://jersey.dev.java.net/issues/show_bug.cgi?id=41
- The default values for the following resource configuration features are
  now false: URI normalization, URI path canonicalization and URI redirection.
  This means by default no automatic redirection will be performed.
- The resource configuration feature FEATURE_IGNORE_MATRIX_PARAMS is
  renamed to FEATURE_MATCH_MATRIX_PARAMS and the default value is now false.
- Fixed issue 35: Cryptic error message for invalid media type of response
  https://jersey.dev.java.net/issues/show_bug.cgi?id=35